--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
         "web-vitals": "^5.0.1"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "set PORT=3000 && set HOST=0.0.0.0 && react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
